<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">
    <TextView
        android:id="@+id/textview_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_title_lesson"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textview_developer_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DeveloperTeam"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/textview_help_improve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_improve"
        android:textSize="@dimen/text_size_help_improve"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/text_view_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Facebook"/>
        <TextView
            android:id="@+id/textview_link_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            />
    </LinearLayout>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="OK"
        />



</LinearLayout>