<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/text_image_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/tv_request_listening"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/listening_practice_sound"/>
        <ImageView
            android:id="@+id/img_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginLeft="@dimen/right_icon_margin"
            android:src="@drawable/right_icon"
            android:alpha="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/word_and_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_image_question"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/bt_practice_listening_speaker"
            android:layout_width="@dimen/speaker_size"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_volume_on"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/tv_word_practice"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/star_practice_size"
            android:text=""
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="@dimen/inputword_text_size" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvResultListeningPractice"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="@dimen/inputword_text_size"
            android:layout_marginLeft="@dimen/margin_between_result_request"
            android:text=""/>
    </LinearLayout>
    <EditText
        android:id="@+id/edit_answer_practice_reading"
        android:layout_above="@+id/layout_button_practice_listening_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="visible"/>


    <RelativeLayout
        android:id="@+id/layout_button_practice_listening_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_practice_button"
        android:layout_above="@+id/practice_listening_sound_button_check_answer">
        <Button
            android:id="@+id/bt_practice_listening_answer1"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:layout_marginBottom="@dimen/bt_answer1_practice_listening_margin_bottom"
            android:textSize="@dimen/text_size_button_practice"
            android:text="@string/sound01"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/bt_practice_listening_answer2"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer1"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:layout_marginBottom="@dimen/bt_answer1_practice_listening_margin_bottom"
            android:textSize="@dimen/text_size_button_practice"
            android:text="@string/sound02"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/bt_practice_listening_answer3"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer2"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:layout_marginBottom="@dimen/bt_answer1_practice_listening_margin_bottom"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_practice_listening_answer4"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer3"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:layout_marginBottom="@dimen/bt_answer1_practice_listening_margin_bottom"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_practice_listening_answer5"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/bt_answer5_practice_listening_margin_bottom"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_practice_listening_answer6"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer5"
            android:layout_marginBottom="@dimen/bt_answer5_practice_listening_margin_bottom"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_practice_listening_answer7"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer6"
            android:layout_marginBottom="@dimen/bt_answer5_practice_listening_margin_bottom"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/bt_practice_listening_answer8"
            android:layout_width="@dimen/practice_listening_button_size"
            android:layout_height="@dimen/practice_listening_button_size"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/bt_practice_listening_answer7"
            android:layout_marginBottom="@dimen/bt_answer5_practice_listening_margin_bottom"
            android:layout_marginLeft="@dimen/bt_answer1_practice_listening_margin_left"
            android:textSize="@dimen/text_size_button_practice"
            android:textAllCaps="false"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/practice_listening_sound_button_check_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Check"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/practice_listening_button_check_margin"
        android:layout_marginLeft="@dimen/practice_listening_button_check_margin"
        android:layout_marginRight="@dimen/practice_listening_button_check_margin"
        />

</RelativeLayout>
